fix american government references alignment #2282

--- a/css/ccap-american-government.css
+++ b/css/ccap-american-government.css
@@ -2507,9 +2507,10 @@ div.end-of-book-references > .chapter-area > .body > .section-area > .title {
 div.end-of-book-references > .chapter-area > .body > .section-area > .body p {
   text-indent: -2em;
   margin-left: 2em;
-  margin-left: 1.5em;
+  margin-left: 0;
   text-indent: 0em;
   text-align: left;
+  display: inline;
 }
 div.end-of-book-references > .chapter-area > .body > p {
   text-indent: 0em;
@@ -3770,10 +3771,12 @@ div.end-of-book-references > .chapter-area > .body > .section-area .note.referen
   padding: 0px;
   counter-increment: references;
 }
-div.end-of-book-references > .chapter-area > .body > .section-area .note.reference > .body p::before {
+div.end-of-book-references > .chapter-area > .body > .section-area .note.reference > .body {
+  margin-bottom: .5em;
+}
+div.end-of-book-references > .chapter-area > .body > .section-area .note.reference > .body::before {
   content: counter(references) ".";
-  margin-left: -19px;
-  margin-right: 8px;
+  padding-right: .5em;
 }
 /* ---------------------------------------------------
  * Answer Key
