--- a/css/refactor/american-government-skeleton.less
+++ b/css/refactor/american-government-skeleton.less
@@ -88,9 +88,17 @@ div.book div.chapter > div.section > p + div.section {
      #part>#book-end>#end-of-book-references>#chapter-area>.style();
      > .body > .section-area .note.reference {
        #part>#book-end>#end-of-book-references>#chapter-area>#note>.style(any; any);
-       > .body p::before {
+
+       > .body {
+         margin-bottom: .5em;
+       }
+
+       > .body::before {
          #part>#book-end>#end-of-book-references>#reference>.number();
        }
+     }
+     > .body > .section-area .note.reference:nth-child(n+10) .body p {
+       //margin-left: 3rem;
      }
    }
  }
