--- a/css/refactor/american-government-slots.less
+++ b/css/refactor/american-government-slots.less
@@ -69,14 +69,15 @@
     #end-of-book-references {
       #reference {
         .style(...) {
-          margin-left: 1.5em;
+          margin-left: 0;
           text-indent: 0em;
           text-align: left;
+          display: inline;
           }
           .number() {
             content: counter(references) ".";
-            margin-left: -19px;
-            margin-right: 8px;
+            //margin-left: -19px;
+            padding-right:.5em;
           }
       }
       #chapter-area {
